--- a/native/package.json
+++ b/native/package.json
@@ -52,6 +52,7 @@
   },
   "dependencies": {
     "@expo/ngrok": "^4.1.3",
+    "@expo/vector-icons": "^15.0.3",
     "@react-navigation/native": "^7.1.28",
     "@react-navigation/native-stack": "^7.10.1",
     "@shopify/react-native-skia": "^2.2.12",
