--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -28,6 +28,9 @@ dependencies = [
 
     # File uploads
     "pillow>=10.2",
+
+    # AWS SES for email
+    "boto3>=1.34",
 ]
 
 [project.optional-dependencies]
